--- a/lskt_parent/service/service_vod/pom.xml
+++ b/lskt_parent/service/service_vod/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>joda-time</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
