腾讯云点播服务

--- a/lskt_parent/service/service_vod/pom.xml
+++ b/lskt_parent/service/service_vod/pom.xml
@@ -24,6 +24,18 @@
             <version>5.6.89</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>vod_api</artifactId>
+            <version>2.1.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <!-- 日期工具栏依赖 -->
         <dependency>
             <groupId>joda-time</groupId>
