--- a/lskt_parent/service/pom.xml
+++ b/lskt_parent/service/pom.xml
@@ -13,6 +13,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>service_vod</module>
+        <module>service_order</module>
+        <module>service_activity</module>
     </modules>
 
     <properties>
