--- a/lskt_parent/service/service_user/pom.xml
+++ b/lskt_parent/service/service_user/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service_user</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>service_user_client</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
