--- a/lskt_parent/service_client/pom.xml
+++ b/lskt_parent/service_client/pom.xml
@@ -3,13 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>service</artifactId>
+        <artifactId>lskt_parent</artifactId>
         <groupId>person.cls</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>service_user_client</module>
+    </modules>
 
-    <artifactId>service_user</artifactId>
+    <artifactId>service_client</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
