--- a/lskt_parent/service_client/service_user_client/pom.xml
+++ b/lskt_parent/service_client/service_user_client/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>service_user</artifactId>
+        <artifactId>service_client</artifactId>
         <groupId>person.cls</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
